Added 100% test coverage for Bid- Favorite- and UserService